Fix: Add whitespace
Add whitespace to the project.

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+html, body, #root {
+  height: 100%;
+  width: 100%;
+}
+
 #root {
   max-width: 100%;
   width: 100%;
@@ -15,6 +20,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .logo {
